--- a/backend/public/mobile.html
+++ b/backend/public/mobile.html
@@ -73,20 +73,11 @@
             transform: translate(-50%, -50%);
             width: 200px;
             height: 200px;
-            border: 3px solid rgba(255, 255, 255, 0.8);
-            border-radius: 50%;
+            background-image: url('/OVR-IMG/finsta-overkay.png');
+            background-size: contain;
+            background-position: center;
+            background-repeat: no-repeat;
             pointer-events: none;
-        }
-
-        .face-overlay::before {
-            content: '';
-            position: absolute;
-            top: -10px;
-            left: -10px;
-            right: -10px;
-            bottom: -10px;
-            border: 2px solid rgba(255, 255, 255, 0.3);
-            border-radius: 50%;
         }
 
         .controls {
