--- a/backend/public/mobile.html
+++ b/backend/public/mobile.html
@@ -71,10 +71,10 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 200px;
-            height: 200px;
+            width: 520px;
+            height: 520px;
             background-image: url('/OVR-IMG/finsta-overkay.png');
-            background-size: contain;
+            background-size: 150%;
             background-position: center;
             background-repeat: no-repeat;
             pointer-events: none;
