Your commit message here

--- a/backend/public/mobile.html
+++ b/backend/public/mobile.html
@@ -73,7 +73,7 @@
             transform: translate(-50%, -50%);
             width: 270px;
             height: 270px;
-            background-image: url('/OVR-IMG/finsta-overkay.png');
+            background-image: url('/OVR-IMG/finsta-overkay.webp');
             background-size: contain;
             background-position: center;
             background-repeat: no-repeat;
